# pydantic-ai-stream

./: .mise.toml  README.md  main.py  pyproject.toml
examples/: .mise.toml  assistant.py  fastapi_sse.py
opale/agent_stream/: __init__.py  session.py
src/opale/agent_stream/: stream.py
src/opale/agx/: __init__.py  deps.py  store.py  stream.py
src/pydantic_ai_stream/: __init__.py  deps.py  settings.py
tests/: conftest.py  test_deps.py  test_log.py  test_run.py  test_session.py  test_stream.py
