[project]
name = "opale-agent-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=1.33.0"]
authors = [{ name = "Opale OSS", email = "oss@opale.ai" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opale"]
